# pulga-zephyr-turbine

./: README.md  west.yml
app-ble/: CMakeLists.txt  prj.conf
app-ble/src/: main.c
app-turbine/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app-turbine-1600/: CMakeLists.txt  prj.conf
app-turbine-1600-ble/: debug.conf  prj.conf
app-turbine-1600-ble/src/: bmi160.c  bmi160.h  bmi160_defs.h  main.c
app-turbine-1600/src/: main.c
app-turbine-6400/: prj.conf
app-turbine-6400-ble/: prj.conf
app-turbine-6400-ble/boards/: pulga.overlay
app-turbine-6400-ble/src/: main.c
app-turbine-6400/boards/: pulga.overlay
app-turbine-6400/src/: main.c
app-turbine/boards/: pulga.overlay
app-turbine/src/: main.c  marmonet_structs.h
app/boards/: pulga.overlay
ble_ktimer/: CMakeLists.txt  prj.conf
ble_ktimer/src/: main.c  marmonet_helpers.c  marmonet_helpers.h  marmonet_params.h  marmonet_structs.h  sensors_interface.h
